# Projet_virology

./: .env.example  .gitignore  Dockerfile.server  QUICKSTART.txt  README.md  controller.py  docker-compose.yml  generate_keys.py  generate_mock_logins.py  requirements.txt  serve_agent.py  setup.sh  wipe_gist.py
c2_agent/: Cargo.toml  Dockerfile  Dockerfile.windows  build.rs  build.sh  installer.nsi  mock_logins.json
c2_agent/src/: main.rs
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/bots/[botId]/: BotCredentialsClient.tsx  page.tsx
frontend/src/app/control/: page.tsx
frontend/src/app/credentials/: page.tsx
frontend/src/app/hashcrack/: page.tsx
frontend/src/app/network/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: app-sidebar.tsx  command-menu.tsx  panic-button.tsx  theme-toggle.tsx
frontend/src/components/dashboard/: activity-feed.tsx  bot-row-actions.tsx  dashboard-toolbar.tsx  network-sparkline.tsx  terminal-sheet.tsx  threat-map.tsx  topology-map.tsx
frontend/src/components/terminal/: Terminal.tsx
frontend/src/components/ui/: dropdown-menu.tsx  resizable.tsx  search-button.tsx  sidebar.tsx  table.tsx
frontend/src/context/: SocketContext.tsx  TerminalHistoryContext.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/types/: types.ts
privesc/: Readme.md  go.mod  privesc.go
